; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_vo_vaapi.c_free_subpicture.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_vo_vaapi.c_free_subpicture.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.priv = type { i32 }
%struct.vaapi_osd_image = type { i64, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@VA_INVALID_ID = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.priv*, %struct.vaapi_osd_image*)* @free_subpicture to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_subpicture(%struct.priv* %0, %struct.vaapi_osd_image* %1) #0 {
  %3 = alloca %struct.priv*, align 8
  %4 = alloca %struct.vaapi_osd_image*, align 8
  store %struct.priv* %0, %struct.priv** %3, align 8
  store %struct.vaapi_osd_image* %1, %struct.vaapi_osd_image** %4, align 8
  %5 = load %struct.vaapi_osd_image*, %struct.vaapi_osd_image** %4, align 8
  %6 = getelementptr inbounds %struct.vaapi_osd_image, %struct.vaapi_osd_image* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @VA_INVALID_ID, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load %struct.priv*, %struct.priv** %3, align 8
  %13 = getelementptr inbounds %struct.priv, %struct.priv* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.vaapi_osd_image*, %struct.vaapi_osd_image** %4, align 8
  %16 = getelementptr inbounds %struct.vaapi_osd_image, %struct.vaapi_osd_image* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @vaDestroyImage(i32 %14, i64 %18)
  br label %20

20:                                               ; preds = %11, %2
  %21 = load %struct.vaapi_osd_image*, %struct.vaapi_osd_image** %4, align 8
  %22 = getelementptr inbounds %struct.vaapi_osd_image, %struct.vaapi_osd_image* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @VA_INVALID_ID, align 8
  %25 = icmp ne i64 %23, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %20
  %27 = load %struct.priv*, %struct.priv** %3, align 8
  %28 = getelementptr inbounds %struct.priv, %struct.priv* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.vaapi_osd_image*, %struct.vaapi_osd_image** %4, align 8
  %31 = getelementptr inbounds %struct.vaapi_osd_image, %struct.vaapi_osd_image* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = call i32 @vaDestroySubpicture(i32 %29, i64 %32)
  br label %34

34:                                               ; preds = %26, %20
  %35 = load i64, i64* @VA_INVALID_ID, align 8
  %36 = load %struct.vaapi_osd_image*, %struct.vaapi_osd_image** %4, align 8
  %37 = getelementptr inbounds %struct.vaapi_osd_image, %struct.vaapi_osd_image* %36, i32 0, i32 1
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  store i64 %35, i64* %38, align 8
  %39 = load i64, i64* @VA_INVALID_ID, align 8
  %40 = load %struct.vaapi_osd_image*, %struct.vaapi_osd_image** %4, align 8
  %41 = getelementptr inbounds %struct.vaapi_osd_image, %struct.vaapi_osd_image* %40, i32 0, i32 0
  store i64 %39, i64* %41, align 8
  ret void
}

declare dso_local i32 @vaDestroyImage(i32, i64) #1

declare dso_local i32 @vaDestroySubpicture(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
